@@ -232,6 +232,7 @@ Junichi Uekawa
 István Váradi
 Philip Van Hoof
 Kristof Vansant
+James Vega
 David Vermeille
 Sid Vicious
 Bjoern Voigt
